--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Rfrmnsyh
+logo: /assets/img/headshot_small.jpeg
+description: Operations Coordinator @ Coding With Kids | Recent Computer Science Graduate from Seattle University 
+show_downloads: true
+theme: jekyll-theme-minimal
