--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Rfrmnsyh
-logo: /assets/img/headshot_small.jpeg
-description: Operations Coordinator @ Coding With Kids | Recent Computer Science Graduate from Seattle University 
+title: Riyan Firmansyah
+logo: /assets/img/headshot_circle.jpeg
+description: CAR | Mechanical Engineering
 show_downloads: true
 theme: jekyll-theme-minimal
