--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Riyan Firmansyah
 logo: /assets/img/headshot_circle.jpeg
-description: CAR | Mechanical Engineering
+#description: CAR | Mechanical Engineering
 show_downloads: true
 theme: jekyll-theme-minimal
