--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Riyan Firmansyahhh
+title: Riyan Firmansyah
 logo: /assets/img/headshot_circle.jpeg
 description: CAR | Mechanical Engineering
 show_downloads: true
