--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Riyan Firmansyah
 logo: /assets/img/headshot_circle.png
-description: CAR | Mechanical Engineering
+description: Research Asistant
 show_downloads: true
 theme: jekyll-theme-minimal
