--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Riyan Firmansyah
 logo: /assets/img/headshot_circle.png
 description: Research Asistant
+LinkedIn: https://www.linkedin.com/in/arrynfr/
 show_downloads: true
 theme: jekyll-theme-minimal
