--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: Riyan Firmansyah
 logo: /assets/img/headshot_circle.png
-description: Research Asistant 
+description: Research Asistant github:
+  zip_url: http://example.com/download.zip
+  another_url: another value
 show_downloads: true
 theme: jekyll-theme-minimal
