--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Riyan Firmansyah
 logo: /assets/img/headshot_circle.png
 description: Research Asistant
-- linkedIn
+description_o: linkedIn
 show_downloads: true
 theme: jekyll-theme-minimal
 
